--- a/example/client/index.html
+++ b/example/client/index.html
@@ -22,7 +22,7 @@
             var config = {
                 "debug": true,
                 "info":  document.getElementById('result'),
-                "url":   "http://xxuyou.com/",   // wss 服务器 url
+                "url":   "https://xxuyou.com/",   // wss 服务器 url
                 "app":   "my_test_app",   // 自己创建的 app name，用于域权限验证
                 "jwt":   "<?php echo $token; ?>", // 使用 JWT 制作的用户令牌，用于用户身份验证
                 "listener": []  // 待注册的监听事件，数组内放置多个监听函数
